# vigil

./: .coverage  .env.example  .gitignore  2026_chairman_final_portfolio.md  AUDIT-REPORT.md  Plan.md  README.md  anytype_bible.py  anytype_birthdays.py  anytype_client.py  anytype_finance.py  anytype_todoist.py  anytype_weather.py  anytype_writer.py  bible_reading.py  evidence-based-python-codebase-audit-ruff-google.md  financial_monitor.py  fm_config.py  fm_evaluators.py  fm_fetchers.py  implementation_plan.md  notion_bible.py  notion_birthdays.py  notion_client.py  notion_finance.py  notion_todoist.py  notion_weather.py  notion_writer.py  pyproject.toml  setup-guide.md  weather_fetch.py
.github/workflows/: ci.yml
data/examples/: contacts.example.json  financial_checklist.example.md  ofx_banks_config.example.json  reading_plan.example.json
docs/: setup-guide-hermes.md  setup-guide-openclaw.md  setup-guide.md
docs/planning/: task_list_anytype.md
planning_docs/: execution_prompt.md  handoff_prompt_anytype.md  implementation_plan_anytype.md  task_list_anytype.md
prompts/: heartbeat.md  morning_sweep.md  periodic_sweep.md
prompts/setup/: convert_contacts.md  convert_reading_plan.md  generate_reply_style.md  generate_voice_profile.md
scripts/: check.sh  install-anytype.sh
src/vigil/: __init__.py  bible.py  cli.py  clock.py  config.py  runtime.py  weather.py
src/vigil/anytype/: __init__.py  bible.py  birthdays.py  finance.py  todoist.py  weather.py  writer.py
src/vigil/financial/: __init__.py  evaluators.py  fetchers.py  monitor.py
tests/: test_anytype_bible.py  test_anytype_birthdays.py  test_anytype_client.py  test_anytype_finance.py  test_anytype_todoist.py  test_anytype_weather.py  test_anytype_writer.py  test_bible.py  test_bible_reading.py  test_cli.py  test_clock.py  test_config.py  test_financial_monitor.py  test_install_anytype_script.py  test_notion_bible.py  test_notion_birthdays.py  test_notion_client.py  test_notion_finance.py  test_notion_todoist.py  test_notion_weather.py  test_notion_writer.py  test_weather.py  test_weather_fetch.py
tests/anytype/: test_bible.py  test_birthdays.py  test_client.py  test_finance.py  test_todoist.py  test_weather.py  test_writer.py
tests/financial/: test_monitor.py
