[project]
name = "vigil"
version = "0.1.0"
description = "Vigilant Integrated Guidance for Individual Living"
requires-python = ">=3.12"
dependencies = [
    "snaptrade-python-sdk>=11.0.0",
    "ofxtools>=0.9.5",
    "fredapi>=0.5.2",
    "yfinance>=1.2.0",
    "httpx>=0.28.0",
    "typer>=0.21.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vigil = "vigil.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.11",
    "mypy>=1.14",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["tmp", ".venv", ".agents"]
lint.select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "C90", "DTZ", "T20", "SIM", "PT", "PIE", "N", "ANN", "D", "TCH", "RUF", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "SIM300", "D100", "D101", "D102", "D103", "D104", "TCH"]
"src/vigil/financial/monitor.py" = ["T201", "C901"]
"src/vigil/weather.py" = ["T201"]
"src/vigil/bible.py" = ["T201", "C901"]
"src/vigil/financial/fetchers.py" = ["C901"]
"src/vigil/anytype/writer.py" = ["T201"]
"src/vigil/cli.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ['tmp/', '\.venv/']

[[tool.mypy.overrides]]
module = [
    "ofxtools.*",
    "snaptrade_client.*",
    "yfinance.*",
    "fredapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
